--- a/FilesToIpfs/FilesToIpfs.xib
+++ b/FilesToIpfs/FilesToIpfs.xib
@@ -140,7 +140,7 @@ Gw
 </string>
                     </buttonCell>
                     <connections>
-                        <action selector="cancelAction:" target="Wh5-GA-9Pm" id="atJ-WP-x0v"/>
+                        <action selector="cancelAction:" target="-2" id="i85-ff-d0x"/>
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXP-Vs-r3U">
